--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
-		"@prettier/plugin-xml": "^2.2.0",
-		"@types/node": "^18.7.18",
-		"@types/prettier": "^2.7.0",
-		"prettier": "^2.7.1"
+		"@types/node": "^18.7.18"
 	}
 }
