--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "npx ts-node src/index.ts"
+		"build": "node esbuilder.mjs",
+		"start": "node esbuilder.mjs && node ./dist/out.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,6 +13,7 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
+		"esbuild": "^0.15.8",
 		"eslint": "^8.23.1",
 		"typescript": "^4.8.3"
 	},
