--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@tsconfig/node14": "^1.0.3",
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
 		"esbuild": "^0.15.8",
+		"esbuild-plugin-eslint": "^0.1.1",
 		"eslint": "^8.23.1",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
-		"@types/node": "^18.7.18"
+		"@types/node": "^18.7.18",
+		"esbuild-node-externals": "^1.5.0"
 	}
 }
