--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"eslint": "^8.23.1",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.7.1",
+		"prettier-eslint": "^15.0.1",
 		"typescript": "^4.8.3"
 	},
 	"dependencies": {
