--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-	"name": "dialog-compiler-ts",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "node esbuilder.mjs",
-		"start": "node esbuilder.mjs && node ./dist/out.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@tsconfig/node14": "^1.0.3",
-		"@typescript-eslint/eslint-plugin": "^5.38.0",
-		"@typescript-eslint/parser": "^5.38.0",
-		"esbuild": "^0.15.8",
-		"esbuild-plugin-eslint": "^0.1.1",
-		"eslint": "^8.23.1",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"prettier": "^2.7.1",
-		"prettier-eslint": "^15.0.1",
-		"typescript": "^4.8.3"
-	},
-	"dependencies": {
-		"@types/node": "^18.7.18",
-		"esbuild-node-externals": "^1.5.0"
-	}
+    "name": "dialog-compiler-ts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "lib/index.js",
+    "module": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "scripts": {
+        "ts-types": "tsc --emitDeclarationOnly --outDir lib",
+        "clean": "rimraf lib",
+        "build": "pnpm run clean && node esbuilder.mjs && pnpm run ts-types"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@tsconfig/node14": "^1.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.38.0",
+        "@typescript-eslint/parser": "^5.38.0",
+        "esbuild": "^0.15.8",
+        "esbuild-plugin-eslint": "^0.1.1",
+        "eslint": "^8.23.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1",
+        "prettier-eslint": "^15.0.1",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.8.3"
+    },
+    "dependencies": {
+        "@types/node": "^18.7.18",
+        "esbuild-node-externals": "^1.5.0"
+    }
 }
