--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
-	"extends": "@tsconfig/node14/tsconfig.json",
-	"compilerOptions": {
-		"removeComments": true,
-		"preserveConstEnums": true,
-		"emitDeclarationOnly": true,
-		"declaration": true
-	}
+    "compilerOptions": {
+        "declaration": true,
+        "target": "esnext",
+        "lib": ["esnext", "dom"],
+        "strict": true,
+        "noImplicitAny": false,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "outDir": "lib",
+        "removeComments": true
+    }
 }
