--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
         "typescript": "^4.8.3"
     },
     "dependencies": {
-        "@types/node": "^18.7.18",
-        "esbuild-node-externals": "^1.5.0"
+        "@types/node": "^18.7.18"
     }
 }
