--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
         "ts-types": "tsc --emitDeclarationOnly --outDir lib",
         "clean": "rimraf lib",
         "build": "pnpm run clean && node esbuilder.mjs && pnpm run ts-types",
-        "test": "node ./test/test.js"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@tsconfig/node14": "^1.0.3",
+        "@types/jest": "^29.0.3",
         "@typescript-eslint/eslint-plugin": "^5.38.0",
         "@typescript-eslint/parser": "^5.38.0",
         "esbuild": "^0.15.8",
@@ -23,9 +24,11 @@
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.0.3",
         "prettier": "^2.7.1",
         "prettier-eslint": "^15.0.1",
         "rimraf": "^3.0.2",
+        "ts-jest": "^29.0.1",
         "typescript": "^4.8.3"
     },
     "dependencies": {
